# RIG-Agentic-Engineering

./: .gitignore  AGENTS.md  CODEX.md  EVALUATOR.md  HERMES.md  Makefile  PYCODE.md  README.md  RIG_DOCTRINE.md  VERIFIER.md  pyproject.toml
agents/evaluator/: AGENTS.md
agents/generator/: AGENTS.md
agents/hermes/: AGENTS.md
agents/verifier/: AGENTS.md
config/: api_registry.yaml  app_registry.yaml  approval_registry.yaml  deerflow_rig.yaml  environment.yaml  local_paths.yaml  mcp_registry.yaml  model_registry.yaml  node_registry.yaml  proof_registry.yaml  runtime_versions.yaml  service_registry.yaml  tool_registry.yaml  workflow_registry.yaml
contracts/v1/: run_envelope.py
contractsv1/: done_contract.py  verifier_package.py
docs/: AIDER_SETUP_REPORT.md  BLOCKERS.md  CURRENT_RIGFORGE_STATUS.md  NEXT_SAFE_ACTION.md  PHASE_1_BOOTSTRAP_REPORT.md  PHASE_2_ENVIRONMENT_REPORT.md  PHASE_3_RUNTIME_REPORT.md  V10_READINESS_DESIGN.md
docs/architecture/: OPTIONAL_TOOL_MAPPING.md
integrations/: __init__.py
rigforge/: __init__.py  __main__.py  cli.py  models.py
runtime/: __init__.py
scripts/: recall_check.py  recall_pull_cards.py  start_deerflow_run.py  verify_aider.py  verify_control_plane.py  verify_deerflow_mapping.py  verify_deerflow_proof.py  verify_environment.py  verify_services.py  verify_versions.py  write_environment_proof.py
tests/: conftest.py  test_approve.py  test_build.py  test_doctor.py  test_init.py  test_learn.py  test_promote_skill.py  test_repo_bootstrap.py  test_retrofit.py  test_v10_readiness_design.py  test_verify.py
(+84 files in other folders)
