[project]
name = "rigforge"
version = "0.1.0"
description = "Deterministic CLI command surface for RIG Agentic Engineering and RIG App Studio"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
rigforge = "rigforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rigforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
